--- a/templates/livraison/_form.html.twig
+++ b/templates/livraison/_form.html.twig
@@ -6,11 +6,11 @@
  <div class="card">
         <div class="card-body">
         <div class="form-group">
-    <label>Commande</label>
-    {{ form_widget(form.commande, { 'attr': {'class': 'form-control'} })}}
+    <label>Client: </label>
+    {{ form_widget(form.client, { 'attr': {'class': 'form-control'} })}}
     </div>
         <div class="form-group">
-        <label>Etat Livraison A corrigerrrrrr   (etat livree/ nonlivree)</label>
+        <label>Etat Livraison (etat livree/ nonlivree)</label>
     {{ form_widget(form.etatLivraison, { 'attr': {'class': 'form-control'} })}}
     </div>
     
