--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -16,16 +16,14 @@
 
     <div class="container-xxl flex-grow-1 container-p-y">
      <div class="card" >
-         <nav
-                 class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
-                 id="layout-navbar"
-                 style="align-content: center"
-         >
-             <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none" >
-                 <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
-                     <i class="bx bx-menu bx-sm"></i>
-                 </a>
-             </div>
+         <div class="card">
+             <nav class="navbar navbar-example navbar-expand-lg navbar-light bg-light">
+                 <div class="container">
+{#             <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none" >#}
+{#                 <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">#}
+{#                     <i class="bx bx-menu bx-sm"></i>#}
+{#                 </a>#}
+{#             </div>#}
              <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
                  <div class="content-wrapper">
                      <div class="navbar-nav align-items-center">
@@ -35,9 +33,9 @@
                      </div>
                  </div>
              </div>
+                 </div></nav></div>
 
-
-         </nav>
+{#         </nav>#}
         <h1 class="card-header">table des produit</h1>
         <div class="table" >
             <table id="t" class="table" >
