--- a/templates/aliment/index.html.twig
+++ b/templates/aliment/index.html.twig
@@ -73,16 +73,15 @@
     <script
             src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
     </script>
-    </script>
     <script>
         $( document ).ready(function() {
             $("#show").keyup(function(e) {
                 var value = $(this).val();
                 $.ajax({
-                    url : "{{ path('search_back1') }}",
+                    url : "{{ path('searchbackaliment') }}",
                     method: "GET",
                     data: {
-                        searchValue: value,
+                        searchValues: value,
                     },
                     success : function(data){
                         $('#t tbody#search').empty();
@@ -104,7 +103,7 @@
                                     '</div>'+
                                     '</div></td>'+
                                     '</tr>');
-                            };
+                            }
                         }
                         else
                         {
