--- a/templates/base-front.html.twig
+++ b/templates/base-front.html.twig
@@ -84,33 +84,23 @@
                                     <li class="active">
                                         <a href="/">Home</a>
                                     </li>
+                                    {% if is_granted('ROLE_USER') %}
                                     <li>
                                         <a href="/magasin" class="fh5co-sub-ddown">Shop</a>
                                         <ul class="fh5co-sub-menu">
                                             <li><a href="/panier">Panier</a></li>
-                                            <li><a href="">Branding &amp; Identity</a></li>
-{#                                            <li>#}
-{#                                                <a href="#" class="fh5co-sub-ddown">Free HTML5</a>#}
-{#                                                <ul class="fh5co-sub-menu">#}
-{#                                                    <li><a href="http://freehtml5.co/preview/?item=build-free-html5-bootstrap-template" target="_blank">Build</a></li>#}
-{#                                                    <li><a href="http://freehtml5.co/preview/?item=work-free-html5-template-bootstrap" target="_blank">Work</a></li>#}
-{#                                                    <li><a href="http://freehtml5.co/preview/?item=light-free-html5-template-bootstrap" target="_blank">Light</a></li>#}
-{#                                                    <li><a href="http://freehtml5.co/preview/?item=relic-free-html5-template-using-bootstrap" target="_blank">Relic</a></li>#}
-{#                                                    <li><a href="http://freehtml5.co/preview/?item=display-free-html5-template-using-bootstrap" target="_blank">Display</a></li>#}
-{#                                                    <li><a href="http://freehtml5.co/preview/?item=sprint-free-html5-template-bootstrap" target="_blank">Sprint</a></li>#}
-{#                                                </ul>#}
-{#                                            </li>#}
-                                            <li><a href="#">UI Animation</a></li>
-                                            <li><a href="#">Copywriting</a></li>
-                                            <li><a href="#">Photography</a></li>
                                         </ul>
                                     </li>
-                                    <li>
-                                        <a href="">M</a>
-                                    </li>
-                                    <li><a href="">Trainers</a></li>
+                                    {% endif %}
+                                    {% if is_granted('ROLE_NUTRI') %}
+                                        <li><a href="/front" >regime</a></li>
+
+                                    {% endif %}
+                                    {% if is_granted('ROLE_USER') %}
+                                        <li><a href="/reclamations">Feedback</a></li>
+                                    {% endif %}
                                     <li><a href="/about">About</a></li>
-                                    <li><a href="">Contact</a></li>
+                                    <li><a href="#footer">Contact</a></li>
                                     {% if app.user %}
                                         <li>
 {#                                            {% if app.user.username =="Admin@sahti.com" %}#}
