--- a/templates/magasin/index.html.twig
+++ b/templates/magasin/index.html.twig
@@ -35,12 +35,13 @@
 
                         <div class="card-footer" style="background-color: #373d3f " >
                             <div class="row">
-                                <div class="col">
-                                    <button type="button" class="btn btn-primary" style=" margin-top: 20px"  ><span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart</button>
-                                </div>
-                                <div class="col">
-                                    <a class="btn btn-primary btn" style=" margin-top: 20px"  data-product-name="{{ produit.nom }}" data-product-img="images/{{ produit.image }}" data-product-price="{{ produit.prix }}" data-product-descp="{{ produit.descprod }}" data-product-qte="{{ produit.quantite }}" data-toggle="modal"  data-target="#{{ produit.idProd }}"><i class="fa fa-search"></i> Quick View</a>
-                                </div>
+{#                                <div class="col">#}
+{#                                    <button type="button" class="btn btn-primary" style=" margin-top: 20px"  ><span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart</button>#}
+{#                                </div>#}
+{#                                <div class="col">#}
+                                    <a class="btn btn-primary btn" style=" margin-top: 20px"  data-product-name="{{ produit.nom }}" data-product-img="images/{{ produit.image }}" data-product-price="{{ produit.prix }}" data-product-descp="{{ produit.descprod }}" data-product-qte="{{ produit.quantite }}" data-toggle="modal"  data-target="#{{ produit.idProd }}"><i class="fa fa-search"></i>
+                                        <span class="glyphicon glyphicon-shopping-cart"></span>  Quick View</a>
+{#                                </div>#}
                             </div>
                         </div>
                     </div>
@@ -77,7 +78,8 @@
                                         </div>
                                         <div class="space-ten"></div>
                                         <div class="btn-ground">
-                                            <a href="{{ path('cart_add', {'id': produit.idProd}) }}" type="button" class="btn btn-primary"><span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart</a>
+                                            <a href="{{ path('cart_add', {'id': produit.idProd}) }}" type="button" class="btn btn-primary"><span class="glyphicon glyphicon-shopping-cart"></span>
+                                                Add To Cart</a>
                                         </div>
                                     </div>
                                 </div>
