--- a/templates/reclamations/_form.html.twig
+++ b/templates/reclamations/_form.html.twig
@@ -1,4 +1,34 @@
+<div class="row">
+<div class="col-md-3"></div>
+<div class="col-md-7">
+ {{ form_start(form , {'attr': {'novalidate':'novalidate'}}) }}
+<div class="card">
+        <div class="card-body">
+        <div class="form-group">
 {{ form_start(form, {attr:{novalidate: 'novalidate'}}) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Enregistrer') }}</button>
+     <div class="form-group">
+        <label>Titre réclamation</label>
+    {{ form_widget(form.titre, { 'attr': {'class': 'form-control'} })}}
+    </div>
+     <div class="form-group">
+        <label>Titre réclamation</label>
+    {{ form_widget(form.file, { 'attr': {'class': 'form-control', 'type':'file'} })}}
+    </div>
+    <div class="form-group">
+        <label>Type</label>
+    {{ form_widget(form.type, { 'attr': {'class': 'form-control'} })}}
+    </div>
+     <div class="form-group">
+        <label>Message</label>
+    {{ form_widget(form.message, { 'attr': {'class': 'form-control', 'size':10} })}}
+    </div>
+     
+        <div class="form-group">
+        <button class="btn btn-success p-2 mt-3">{{ button_label|default('Envoyer réclamation') }}</button>
+    </div>
+</div>
+</div>
 {{ form_end(form) }}
+</div>
+</div>
+
